2004-06-11  David Malcolm  <david@davemalcolm.demon.co.uk>

	* plugin-save-dispspec.c (doc_filter): 

	Tool should only appear if doc has a dispspec

2004-06-10  David Malcolm  <david@davemalcolm.demon.co.uk>

	* popup.c (cong_ui_popup_init): 

	Fixed minor visual problem with separators in menu

2004-06-09  David Malcolm  <dmalcolm@redhat.com>

	* popup.c: 

	Exclude the document node from the "Convert to comment" verb

	* cong-file-open.c, cong-primary-window.c, xmldata.c: 

	Experiment to use a NULL dispspec for the case where no dispspec if recognised when loading a document, with an alternate tree-based UI.

	* cong-ui-hooks.h, popup.c, tree.c:

	Added a Convert to Comment/Convert from Comment feature to popup menu for a node

	* cong-tree-view.c: 

	Added boolean add_to_end to this as well

	* cong-debug-log-view.c, cong-document-traversal.c, cong-document.c, cong-document.h, cong-marshal.c, cong-marshal.h, cong-node-modification-add-after.c, cong-node-modification-add-before.c, cong-node-modification-make-orphan.c, cong-node-modification-set-parent.c, cong-node.c, cong-node.h, cong-view.h, cong.marshal, plugin-docbook.c

	Added a gboolean add_to_end argument to node_set_parent operation to indicate whether the node should be added at the end (TRUE) or beginning (FALSE)

2004-06-04  David Malcolm  <dmalcolm@redhat.com>

	* Makefile.am, cong-fake-plugin-hooks.h, cong-app.c (cong_app_private_load_plugins): 
	Add CSS/Sewfox plugin

	* plugin-css.c:
	New file

2004-06-03  David Malcolm  <dmalcolm@redhat.com>

	* xmledit.c (cong_document_view_source): Moved most of the code into new function

	* cong-util.h, cong-util.c (cong_util_show_in_window): New function, refactored from the source_view
	code

	* cong-primary-window.c (add_standard_layout_for_doc): New function, factoring
	out the bulk of cong_primary_window_add_doc

	* cong-menus.c (cong_menus_create_items): Setup sensitivity of printing menu
	options appropriately
